tests/pass/block_comment.py
""" This is a block comment"""

"""
It can have multiple lines 
of comments, will not be parsed
"""
