tests/fail/unterminated_block_comment.py
""" This block comment is not terminated.
